--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@emotion/cache": "11.10.5",
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
@@ -23,15 +24,25 @@
     "@mui/material": "5.11.10",
     "@mui/system": "5.11.9",
     "@mui/x-date-pickers": "5.0.19",
+    "@reduxjs/toolkit": "^1.9.3",
     "apexcharts": "3.37.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "date-fns": "2.29.3",
+    "emailjs": "^4.0.1",
+    "express": "^4.18.2",
     "formik": "2.2.9",
     "next": "13.1.6",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.1",
     "simplebar-react": "^3.2.1",
     "yup": "1.0.0"
   },
